services/Linkerd/ingressRoute-Linkerd.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: linkerd
  namespace: linkerd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mesh.spamasaurus.com`)
      kind: Rule
      services:
        - name: linkerd-web
          port: 8084
          namespace: linkerd
      middlewares:
        - name: 2fa-authentication@file
        - name: security-headers@file
        - name: compression@file
